--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "socket.io": "^4.8.1"
+    "say": "^0.16.0",
+    "socket.io": "^4.8.1",
+    "uuid": "^11.1.0"
   }
 }
