--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "music-metadata": "^11.2.3",
     "say": "^0.16.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
