--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "private": true,
   "dependencies": {
+    "axios": "^1.9.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "music-metadata": "^11.2.3",
